test/errors/parser/syntax_unterminated_math_expr.ms
a = 1-
// Syntax Error (Line 1, Column 7): Expecting either a terminal or a starting parentheses, instead got token TOKEN_NL.
